force-app/main/default/objects/Contact/fields/First_Year_With_Club__c.field-meta.xml
<CustomField>
    <fullName>First_Year_With_Club__c</fullName>
    <description>First Year With Club.  4 digit year only.</description>
    <inlineHelpText>First Year With Club.  4 digit year only.</inlineHelpText>
    <label>First Year With Club</label>
    <length>4</length>
    <type>Text</type>
</CustomField>