force-app/main/default/objects/Contact/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rugby_Positions</valueSetName>
    </valueSet>
</CustomField>