force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Player</fullName>
            </value>
            <value>
                <fullName>Old Boy</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Friend of Club</fullName>
            </value>
            <value>
                <fullName>Opponent</fullName>
            </value>
            <value>
                <fullName>Referee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>